--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,10 @@
   --panel: #ffffff;
   --text: #1f2937;
   --accent: #7e0404;
+  --surface: #fafafa;
   --radius: 16px;
   --shadow: 0 4px 16px rgba(0, 0, 0, 0.08);
+  --transition: transform 0.2s ease-in-out;
 }
 
 html, body, #root {
@@ -16,6 +18,9 @@ html, body, #root {
 
     padding: 10px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+
+    font-weight: 700;
+    letter-spacing: .2px;
 
 }
 
@@ -42,8 +47,7 @@ html, body, #root {
 
 .panel__title {
   font-size: 18px;
-  font-weight: 700;
-  letter-spacing: .2px;
+  
   margin: 0 0 14px;
   display: flex;
   align-items: center;
@@ -52,40 +56,81 @@ html, body, #root {
 
 .surface {
     border: 1px solid #e5e7eb;
-    background: #fafafa;
+    background: var(--surface);
     border-radius: var(--radius);
     flex: 1;
-    overflow: hidden;
     padding: var(--radius);
-
+    overflow: auto;
     min-height: 0;
     
 }
 
-
 button{
+
     border-radius: var(--radius);
+
+    border: none;
+
+
+}
+
+.add_button{
+    color:white;
+
+    background: var(--accent);
     margin: 10px 0;
     height: 50px;
 
-    background: var(--accent);
-    border: none;
-    color:white;
+    
     transition: all 0.2s ease-in-out;
 }
 
-button:hover {
+.add_button:hover {
     background: #9b0505;
 }
 
 .layer {
-    background: #d4d4d4;
+    background: #e9e8e8;
     border-radius: var(--radius);
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    transition: transform 0.2s ease;
+    justify-content: flex-start;
+    gap: 10px;
+    transition: var(--transition);
 
+}
+
+.layer__buttons {
+    display: flex;
+    flex-direction: column;
+
+    padding: 10px;
+    
+}
+.layer__button {
+    color: rgba(69, 69, 69);
+    border: none;
+    border-radius: var(--radius);
+    padding: 0px;
+    margin: 0px;
+    font-size: 1.5em;
+    background: transparent;
+    
+
+}
+
+.layer__button:hover {
+    color: rgb(167, 167, 167);
+}
+
+.layer__type {
+    height: 75px;
+    width: 75px;
+    background-color: white;
+}
+
+.layer__name{
+    padding: 10px;
 }
